tests/baselines/reference/heterogeneousArrayAndOverloads.errors.txt
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,19): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '文字[]'.
  Type '文字 | 数字' is not assignable to type '文字'.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/heterogeneousArrayAndOverloads.ts (1 errors) ====
    class arrTest {
        test(arg1: number[]);
        test(arg1: string[]);
        test(arg1: any[]) { }
        callTest() {
            this.test([1, 2, 3, 5]);
            this.test(["hi"]);
            this.test([]);
            this.test([1, 2, "hi", 5]); // Error
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '文字[]'.
!!! error TS2345:   Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
        }
    }